<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="346dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/lblName"/>

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/address"
        android:layout_below="@id/txtName" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/lblAddress"/>

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Phone"
        android:layout_below="@id/txtAddress" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/lblPhone"/>

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:layout_below="@id/txtPhone"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@id/lblEmail"/>

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:layout_below="@id/txtEmail"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/lblPassword" />

    <TextView
        android:id="@+id/lblRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_password"
        android:layout_below="@id/txtPassword" />

    <EditText
        android:id="@+id/txtRePassword"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/lblRePassword" />

    <TextView
        android:id="@+id/lblAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/account_type"
        android:layout_below="@id/txtRePassword" />

    <Spinner
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:id="@+id/spAccountType"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:layout_below="@id/lblAccountType"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_bg"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="15sp"
        android:text="@string/create_account"
        android:layout_below="@id/spAccountType"/>


</RelativeLayout>