<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="346dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/lblName"/>

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/address"
        android:layout_below="@id/txtName" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/lblAddress"/>

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Phone"
        android:layout_below="@id/txtAddress" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/lblPhone"/>

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:layout_below="@id/txtPhone"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@id/lblEmail"/>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_bg"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="15sp"
        android:text="@string/changePassword"
        android:layout_below="@id/txtEmail"/>



    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_bg"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="15sp"
        android:text="@string/edit"
        android:layout_below="@id/btnChangePassword"/>


</RelativeLayout>