<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <TextView
        android:id="@+id/lblOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/oldPassword" />

    <EditText
        android:id="@+id/txtOldPassword"
        android:layout_width="346dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/lblOldPassword"/>

    <TextView
        android:id="@+id/lblNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/newPassword"
        android:layout_below="@id/txtOldPassword" />

    <EditText
        android:id="@+id/txtNewPassword"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/lblNewPassword"/>

    <TextView
        android:id="@+id/lblConfirmPassord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirmPassword"
        android:layout_below="@id/txtNewPassword" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/lblConfirmPassord"/>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_bg"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="15sp"
        android:text="@string/changePassword"
        android:layout_below="@id/txtConfirmPassword"/>


</RelativeLayout>