<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/traineeName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorEditTextLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                android:layout_below="@id/layoutName">
                <TextView
                    android:id="@+id/lblFootSteps"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvFootSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorEditTextLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                android:layout_below="@id/layoutSteps">

                <TextView
                    android:id="@+id/lblDistanceTraveled"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceTraveled"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDistanceTraveled"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorEditTextLine"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCaloriesOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                android:layout_below="@id/layoutDistance">

                <TextView
                    android:id="@+id/lblCaloriesOut"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/caloriesOut"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCaloriesOut"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorEditTextLine"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHeartRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                android:layout_below="@id/layoutCaloriesOut">

                <TextView
                    android:id="@+id/lblHeartRate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/heartRate"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRestHeartRate"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorEditTextLine"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFloors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                android:layout_below="@id/layoutHeartRate">

                <TextView
                    android:id="@+id/lblFloors"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/floors"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFloors"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorEditTextLine"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>